# compression-tool

./: CMakeLists.txt  README.md
include/: huffman.h  utils.h
input/: input.txt
src/: .huffman.cpp.swp  huffman.cpp  main.cpp  utils.cpp
